[project]
name = "config-api"
version = "0.1.0"
requires-python = ">=3.10.0"
dependencies = [
    "aiocache>=0.12.0",
    "fastapi>=0.115.6",
    "httpx>=0.27.2",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pymongo[srv]>=4.9.0",
    "tashtiot-apis-library>=0.0.1.dev26",
    "uvicorn>=0.22.0",
]

[tool.uv]
package = false

# The published PyPI build (0.1.0) lags the library and is missing
# fastapi_template.config_api. Resolve from the local source checkout instead.
[tool.uv.sources]
tashtiot-apis-library = { path = "../apis-library", editable = true }

[dependency-groups]
dev = [
    "coverage>=7.14.3",
    "pytest>=7.4.3",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
